--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,176 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  box-sizing: border-box;
+}
+
+
+/*
+
+BROWSER SCROLLBAR KITS
+
+*/
+/* CHROME & SAFARI */
+html::-webkit-scrollbar {
+  width: 8px; 
+}
+
+html::-webkit-scrollbar-track {
+background-color: #05090A;
+}
+
+html::-webkit-scrollbar-thumb {
+background: #05090A;
+border-radius: 8px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:active {
+  background: #05090A;
+  border-radius: 10px;
+}
+
+/* MOZILLA FIREFOX */
+html::-moz-scrollbar {
+  width: 8px; 
+}
+
+html::-moz-scrollbar-track {
+background-color: #05090A;
+}
+
+html::-moz-scrollbar-thumb {
+background: #05090A;
+border-radius: 8px;
+}
+
+html::-moz-scrollbar-thumb:hover {
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
+}
+
+html::-moz-scrollbar-thumb:active {
+  background: #05090A;
+  border-radius: 10px;
+}
+
+
+/* MICROSOFT INTERNET EXPLORER */
+html::-ms-scrollbar {
+  width: 8px; 
+}
+
+html::-ms-scrollbar-track {
+background-color: #05090A;
+}
+
+html::-ms-scrollbar-thumb {
+background: #05090A;
+border-radius: 8px;
+}
+
+html::-ms-scrollbar-thumb:hover {
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
+}
+
+html::-ms-scrollbar-thumb:active {
+  background: #05090A;
+  border-radius: 10px;
+}
+
+/* OPERA */
+html::-o-scrollbar {
+  width: 8px; 
+}
+
+html::-o-scrollbar-track {
+background-color: #05090A;
+}
+
+html::-o-scrollbar-thumb {
+background: #05090A;
+border-radius: 8px;
+}
+
+html::-o-scrollbar-thumb:hover {
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
+}
+
+html::-o-scrollbar-thumb:active {
+  background: #05090A;
+  border-radius: 10px;
+}
+
+
+/*
+
+GENERICS
+
+*/
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+body {
+  background-image: url(./assets/andy-holmes-D6TqIa-tWRY-unsplash.jpg);
+  background-size: cover;
+  position: relative;
+  overflow-x: hidden;
+  min-height: 2200px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+main {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 32px;
+  padding: 32px 64px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  padding: 16px 0;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.row {
+  margin: 0 auto;
+  padding: 0 32px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+h1 {
+  margin: 48px 0;
 }
 
-.read-the-docs {
-  color: #888;
+input {
+  background-color: #05090A;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 16px;
+  padding: 8px 16px;
+  width: 100%;
+}
+
+input:focus {
+  outline: none;
+}
+
+ol {
+  margin: 32px 16px;
+}
+
+li {
+  margin: 16px 0;
 }
