--- a/src/App.css
+++ b/src/App.css
@@ -174,3 +174,17 @@ ol {
 li {
   margin: 16px 0;
 }
+
+span {
+  position: absolute;
+  left: 40%;
+  bottom: 1%;
+  background-color: #fff;
+  color: #000;
+}
+
+a {
+  text-decoration: none;
+  background-color: #fff;
+  color: rgb(0, 179, 255);
+}
